--- a/version.properties
+++ b/version.properties
@@ -1,4 +1,4 @@
 build.revision.number=0
 build.minor.number=0
 build.major.number=1
-build.number=build.major.number+.+build.minor.number+.+build.revision.number
+build.number=1.0.0
