IntroUI Swing + Intro done

--- a/application.properties
+++ b/application.properties
@@ -1,5 +1,5 @@
 
-Team name: XXX
-Team leader: Allan Tsakuhhin
-Team leader email: allan.tsakuhhin@gmail.com
-Team members: Allan Tsakuhhin, Ingvar-Jorgen Kurruk, Dmitri Janis
+Name = XXX
+Leader = Allan Tsakuhhin
+LeaderEmail = allan.tsakuhhin@gmail.com
+Members = Allan Tsakuhhin, Ingvar-Jorgen Kurruk, Dmitri Janis
