--- a/build.xml
+++ b/build.xml
@@ -113,5 +113,40 @@
 	<target name="clean" description="removing the files created during the previous build">
 	   <delete dir="${build}"/>
 	</target>
+	
+	<macrodef name="git">
+		<attribute name="command" />
+		<attribute name="dir" default="" />
+		<element name="args" optional="true" />
+		<sequential>
+			<echo message="git @{command}" />
+			<exec executable="git" dir="@{dir}">
+				<arg value="@{command}" />
+				<args />
+			</exec>
+		</sequential>
+	</macrodef>
 
+	<target name="git_commit" description="commit and puh to GitHub server">
+		<input message="Commit message" addproperty="commit-message"> </input>
+		<echo message="Committing all changes... ${commit-message}"/>
+		<git command="add">
+			<args>
+				<arg value="-a ${basedir}" />
+			</args>
+		</git>
+		<git command="commit">
+			<args>
+				<arg value="-am ${commit-message}" />
+			</args>
+		</git>
+		<input message="Enter user name:" addproperty="username"/>
+		<input message="Enter password:" addproperty="password"/>
+		<git command="push">
+			<args>
+				<arg value="https://${username}:${password}@github.com/${username}/XXX/"/>
+			</args>
+		</git>
+	</target>
+	
 </project>
