--- a/build.xml
+++ b/build.xml
@@ -149,4 +149,20 @@
 		</git>
 	</target>
 	
+	<target name="git_tag">
+		<input message="Enter Tag name" addproperty="tag-name"></input>
+		<input message="Enter Tag comment" addproperty="tag-comment"></input>
+		
+		<echo message="Executing git tag -a ${tag-name} -m ${tag-comment}" />
+		<exec executable="git" failonerror="true">
+		    <arg line="tag -a ${tag-name} -m '${tag-comment}'" />
+		</exec>
+
+		<git command="push">
+			<args>
+				<arg value="--tags" />
+			</args>
+		</git>
+	</target>
+	
 </project>
