testing git tagging

--- a/build.xml
+++ b/build.xml
@@ -155,12 +155,12 @@
 		
 		<echo message="Executing git tag -a ${tag-name} -m ${tag-comment}" />
 		<exec executable="git" failonerror="true">
-		    <arg line="tag -a ${tag-name} -m '${tag-comment}'" />
+		    <arg line="tag -am ${tag-name} '${tag-comment}'" />
 		</exec>
 
 		<git command="push">
 			<args>
-				<arg value="--tags" />
+				<arg value="https://${username}:${password}@github.com/${username}/XXX/"/>
 			</args>
 		</git>
 	</target>
