--- a/build.xml
+++ b/build.xml
@@ -128,11 +128,11 @@
 	</macrodef>
 
 	<target name="git_commit" description="commit and puh to GitHub server">
-		<input message="Commit message" addproperty="commit-message"> </input>
-		<echo message="Committing all changes... ${commit-message}"/>
+		<input message="Commit message" addproperty="message"> </input>
+		<echo message="Committing all changes... ${message}"/>
 		<git command="add">
 			<args>
-				<arg value="-a ${basedir}" />
+				<arg value="${basedir}" />
 			</args>
 		</git>
 		<git command="commit">
@@ -149,18 +149,18 @@
 		</git>
 	</target>
 	
-	<target name="git_tag">
-		<input message="Enter Tag name" addproperty="tag-name"></input>
-		<input message="Enter Tag comment" addproperty="tag-comment"></input>
+	<target name="git_tag" description="ask for a tag name and comment">
+		<input message="Enter Tag name (homework_x):" addproperty="name"></input>
+		<input message="Enter Tag comment (Homework x):" addproperty="comment"></input> 
 		
-		<echo message="Executing git tag -a ${tag-name} -m ${tag-comment}" />
+		<echo message="Executing git tag -a ${name} -m '${comment}'" />
 		<exec executable="git" failonerror="true">
-		    <arg line="tag -am ${tag-name} '${tag-comment}'" />
+		    <arg line="tag -a ${name} -m '${comment}'" />
 		</exec>
 
 		<git command="push">
 			<args>
-				<arg value="https://${username}:${password}@github.com/${username}/XXX/"/>
+				<arg value="--tags"/>
 			</args>
 		</git>
 	</target>
