--- a/build.xml
+++ b/build.xml
@@ -3,23 +3,45 @@
 <project name="XXX" default="current-number">
 
 	<property file="version.properties"/>
-	<property name="build.number" value="${build.major.number}.${build.minor.number}.${build.revision.number}"/>
-	<property name="src" value="${basedir}/src"/>
-	<property name="dist.dir" value="${basedir}/dist"/>
-	<property name="conf.dir" value="${basedir}/etc"/>
-	<property name="doc.dir" value="${build.dir}/doc"/>
-	<property name="test.reports.dir" value="${build.dir}/reports/"/>
-	<property name="jar" value="build/jar"/>
-	<property name="build" value="${basedir}/build"/>
-	<property name="main-class"  value="ee.ut.math.tvt.XXX.Intro"/>
+	<property name="build.number" 		value="${build.major.number}.${build.minor.number}.${build.revision.number}"/>
+	<property name="src" 				value="${basedir}/src"/>
+	<property name="dist.dir" 			value="${basedir}/dist"/>
+	<property name="conf.dir" 			value="${basedir}/etc"/>
+	<property name="doc.dir" 			value="${build.dir}/doc"/>
+	<property name="test.reports.dir" 	value="${build.dir}/reports/"/>
+	<property name="jar" 				value="build/jar"/>
+	<property name="build" 				value="${basedir}/build"/>
+	<property name="main-class"  		value="ee.ut.math.tvt.XXX.Intro"/>
+	<property name="lib.dir" 			value="${basedir}/lib"/>
+	<property name="data.dir"			value="${basedir}/data"/>
+	<property name="db.file"			value="${data.dir}/POSdb"/>
+	<property name="db.alias"			value="POS"/>
+	<property name="db.url" 			value="jdbc:hsqldb:hsql://localhost/POS"/>
+	<property name="lib.hibernate.dir"  value="${lib.dir}/hibernate"/>
 	
     <path id="compile.classpath">
         <fileset dir="${basedir}/lib" includes="**/*.jar"/>
+    	<fileset dir="${lib.hibernate.dir}">
+    		<include name="*.jar"/>
+    	</fileset>
     </path>
 	
     <path id="classpath">
         <fileset dir="${basedir}/lib" includes="**/*.jar"/>
     </path>
+	
+	<path id="run.classpath">
+	        <pathelement location="${build.classes.dir}"/>
+	        <!-- configuration -->
+	        <pathelement location="${conf.dir}"/>
+	        <fileset dir="${lib.dir}">
+	            <include name="*.jar"/>
+	        </fileset>
+
+	        <fileset dir="${lib.hibernate.dir}">
+	             <include name="*.jar"/>
+	        </fileset>
+	</path>
 	
 	<path id="test.classpath">
 		<pathelement location="build/classes"/>
@@ -163,6 +185,24 @@
 				<arg value="--tags"/>
 			</args>
 		</git>
+	</target>
+	
+	<target name="dbmanager" description="Start the HSQLDB manager">
+		<java
+			classname="org.hsqldb.util.DatabaseManagerSwing"
+	        classpathref="run.classpath"
+	        fork="yes">
+			<arg line="--user sa --url ${db.url}" />
+	    </java>
+	 </target>
+
+	 <target name="startdb" description="Start the HSQLDB with the default params">
+	 	<java
+	        classname="org.hsqldb.Server"
+	        classpathref="run.classpath"
+	        fork="yes">
+	        <arg line="-database.0 '${db.file}' -dbname.0 '${db.alias}'" /> 
+	   </java>
 	</target>
 	
 </project>
