--- a/build.xml
+++ b/build.xml
@@ -171,7 +171,7 @@
 		<echo message="Committing... ${message}"/>
 		<git command="add">
 			<args>
-				<arg value="${basedir.dir}" />
+				<arg value="${basedir}" />
 			</args>
 		</git>
 		<git command="commit">
@@ -244,7 +244,7 @@
             compiler="modern"
             target="1.5"
             source="1.5"
-        	classpathref="libs"
+        	classpathref="lib"
         >
 			<classpath>
 				<pathelement path="${build.classes.dir}" />
